--- a/Medicos/Medicos.iOS/Medicos.iOS.csproj
+++ b/Medicos/Medicos.iOS/Medicos.iOS.csproj
@@ -88,6 +88,7 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CustomEntryRenderer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="UnderlineEffect.cs" />
@@ -122,11 +123,11 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\Medicos\Medicos.csproj">
-      <Project>{E394463F-1823-428B-8AAC-348713195A94}</Project>
+      <Project>{804a036e-475a-43fc-b9b7-af0da7214376}</Project>
       <Name>Medicos</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
