--- a/Medicos/Medicos.iOS/Medicos.iOS.csproj
+++ b/Medicos/Medicos.iOS/Medicos.iOS.csproj
@@ -91,6 +91,7 @@
     <Compile Include="CustomDatePickerRenderer.cs" />
     <Compile Include="CustomEntryRenderer.cs" />
     <Compile Include="CustomPickerRenderer.cs" />
+    <Compile Include="CustomSearchBarRenderer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="UnderlineEffect.cs" />
