--- a/Medicos/Medicos.Android/Medicos.Android.csproj
+++ b/Medicos/Medicos.Android/Medicos.Android.csproj
@@ -55,13 +55,16 @@
     <PackageReference Include="Xamarin.Android.Support.v7.MediaRouter" Version="25.4.0.2" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoCompleteRenderer.cs" />
     <Compile Include="CustomSearchBarRenderer.cs" />
     <Compile Include="CustomPickerRenderer.cs" />
     <Compile Include="CustomDatePickerRenderer.cs" />
     <Compile Include="CustomEntryRenderer.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="NullableDatePickerRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveAndroid.cs" />
     <Compile Include="UnderlineEffect.cs" />
   </ItemGroup>
   <ItemGroup>
