--- a/Medicos/Medicos/Medicos.csproj
+++ b/Medicos/Medicos/Medicos.csproj
@@ -7,11 +7,13 @@
   <ItemGroup>
     <None Remove="Assets\consentimiento.pdf" />
     <None Remove="Assets\consolidado.pdf" />
+    <None Remove="Assets\consolidado_a4.pdf" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Assets\consentimiento.pdf" />
     <EmbeddedResource Include="Assets\consolidado.pdf" />
+    <EmbeddedResource Include="Assets\consolidado_a4.pdf" />
   </ItemGroup>
 
   <ItemGroup>
@@ -20,6 +22,7 @@
     <PackageReference Include="Syncfusion.Xamarin.Compression" Version="16.1.0.37" />
     <PackageReference Include="Syncfusion.Xamarin.Core" Version="16.1.0.37" />
     <PackageReference Include="Syncfusion.Xamarin.Pdf" Version="16.1.0.37" />
+    <PackageReference Include="Syncfusion.Xamarin.SfAutoComplete" Version="16.2.0.42" />
     <PackageReference Include="Syncfusion.Xamarin.SfChart" Version="16.1.0.37" />
     <PackageReference Include="Syncfusion.Xamarin.SfDataGrid" Version="16.1.0.37" />
     <PackageReference Include="Syncfusion.Xamarin.SfPdfViewer" Version="16.1.0.37" />
@@ -32,6 +35,7 @@
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.3.6" />
     <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.3.6" />
     <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
+    <PackageReference Include="Xfx.Controls" Version="1.1.3" />
   </ItemGroup>
 
   <ItemGroup>
