--- a/Medicos/Medicos.iOS/Medicos.iOS.csproj
+++ b/Medicos/Medicos.iOS/Medicos.iOS.csproj
@@ -95,6 +95,7 @@
     <Compile Include="CustomSearchBarRenderer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="NullableDatePickerRenderer.cs" />
     <Compile Include="UnderlineEffect.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
