--- a/Medicos/Medicos.iOS/Medicos.iOS.csproj
+++ b/Medicos/Medicos.iOS/Medicos.iOS.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="NullableDatePickerRenderer.cs" />
+    <Compile Include="SaveIOS.cs" />
     <Compile Include="UnderlineEffect.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
