--- a/Medicos/Medicos.iOS/Info.plist
+++ b/Medicos/Medicos.iOS/Info.plist
@@ -44,5 +44,7 @@
 	<string>Caminando Juntos requiere acceder a tu Galeria</string>
 	<key>Custom Property</key>
 	<string></string>
+	<key>Custom Property1</key>
+	<string></string>
 </dict>
 </plist>
